# ph

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
nix/: check.nix  module.nix  package.nix  ph.nix
src/: config.rs  entry.rs  main.rs  path.rs  path_set.rs  tui.rs  util.rs  view.rs
src/cli/: add.rs  mod.rs  plan.rs  prune.rs  status.rs
src/cmd/: complete.rs  format.rs  mod.rs  persist.rs  prune.rs  status.rs
