[package]
name = "ph"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
color-eyre = "0.6.5"
owo-colors = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20.0"
users = "0.11.0"
